Fix layout/z-index code shape

--- a/resources/sass/imports/content/_dark-mode.sass
+++ b/resources/sass/imports/content/_dark-mode.sass
@@ -9,6 +9,7 @@ body.dark-mode // background-color: $tc-blue-dark-3
             background-color: $tc-blue-dark-4
             .body .body-container
                 background-color: $tc-blue-dark-3
+                scrollbar-color: $tc-blue transparent
                 &::-webkit-scrollbar-thumb
                     background: $tc-blue
         .output-wrapper .line-output
