--- a/resources/sass/imports/index/_about.sass
+++ b/resources/sass/imports/index/_about.sass
@@ -20,6 +20,7 @@
     display: flex
     height: 100%
     justify-content: center
+    z-index: 1000
     // @media (max-width: 992px)
     //     display: none
     @media (max-width: 768px)
@@ -39,7 +40,7 @@
     border-radius: 5px
     padding: 2px
     margin: 0 20px 0 0
-    z-index: 1000
+    // z-index: 1000
     @media (max-width: 992px)
         margin: 0
         transform: translateY(-50%) scale(0.7)
@@ -76,17 +77,19 @@
             .header
                 display: flex
                 justify-content: space-between
-                margin-left: 10px
+                margin-left: 5px
                 padding: 2px
                 .btn-actions
                     display: flex
-                    column-gap: 10px
+                    column-gap: 5px
+                    position: relative
+                    top: -1.5px
                     .btn-action
                         top: -1px
                         left: -1px
                         position: relative
                         height: 100%
-                        color: #fff
+                        color: $tc-white
                         padding: 0 15px
                         display: flex
                         align-items: center
@@ -105,6 +108,8 @@
                 overflow-y: auto
                 max-height: 200px
                 height: 200px
+                scrollbar-width: thin
+                scrollbar-color: $tc-grey transparent
                 &::-webkit-scrollbar
                     width: 6px
                     height: 6px
